yopass/yopass/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yopass
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: yopass
  template:
    metadata:
      labels:
        app.kubernetes.io/name: yopass
    spec:
      containers:
      - name: yopass
        image: jhaals/yopass:11.19.1
        args:
          - "--database=redis"
          - "--redis=redis://yopass-redis:6379/0"
        ports:
        - name: http
          containerPort: 1337
        resources: 
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
  revisionHistoryLimit: 1
