yopass/yopass/service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: yopass-svc
spec:
  selector:
    app.kubernetes.io/name: yopass
  type: ClusterIP
  ports:
    - name: http
      port: 1337
