yopass/yopass/yopass-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: yopass-http
  namespace: tools
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`yopass.k8s.lenin.nu`)
    kind: Rule
    middlewares:
    - name: httpsredirect
#    - name: yopass-ipwhitelist
    services:
    - name: yopass-svc
      port: 1337
      namespace: tools
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: yopass-https
  namespace: tools
spec:
  entryPoints:
    - websecure
  tls:
    secretName: 
  routes:
  - match: Host(`yopass.k8s.lenin.nu`)
    kind: Rule
#    middlewares:
#    - name: yopass-ipwhitelist
    services:
    - name: yopass-svc
      port: 1337
      namespace: tools
